assets/css/app.scss
---
---

$family-primary: Arial, sans-serif;
$primary: black;
$text: black;

// Import Main CSS file from theme
@import "main";

.html {
  scroll-padding-top: $navbar-height;
}

.section {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    scroll-margin-top: $navbar-height;
  }
}

.title {
  font-weight: bold;
}

.title,
.subtitle {
  hyphens: manual;

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    font-weight: bold;
    hyphens: manual;
  }
}

.content {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    font-weight: bold;
    hyphens: manual;
  }
}

body {
  hyphens: auto;
}

pre code {
  color: black;
}

/* Make headings the positioning containers. */
h1,
h2,
h3,
h4,
h5,
h6 {
  position: relative;
}

.anchor-link {
  position: absolute;

  /* Position to the left of the heading text. */
  /* This moves the link outside the heading's content box. */
  /* You can adjust this value (e.g., -1.2em) as needed. */
  left: -2em;

  /* Styling */
  top: 50%;
  transform: translateY(-50%);
  text-decoration: none;
  font-size: 0.5em;
  opacity: 0;
}

/* Show the anchor link on heading hover */
h1:hover .anchor-link,
h2:hover .anchor-link,
h3:hover .anchor-link,
h4:hover .anchor-link,
h5:hover .anchor-link,
h6:hover .anchor-link {
  opacity: 0.6;
}

/* Link-specific hover */
.anchor-link:hover {
  opacity: 1;
}

.external-link::after {
  /* The SVG remains with fill="currentColor" */
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1em' height='1em' fill='inherit' class='bi bi-box-arrow-up-right' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5z'/%3E%3Cpath fill-rule='evenodd' d='M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0v-5z'/%3E%3C/svg%3E");

  background-repeat: no-repeat;
  background-size: contain;

  content: "";
  display: inline-block;
  width: 0.75em;
  height: 0.75em;
  margin-left: 5px;

  top: 50%;
  transform: translateY(-50%);
}

